<resources>
    <string name="app_name">OnBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_register_new_user">New Register! New User?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="save">Save</string>
</resources>